<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect_button">Connect</string>
    <string name="address_hint">Address</string>
    <string name="led_on">On</string>
    <string name="led_off">Off</string>
    <string name="motor_coast">Coast</string>
    <string name="motor_stop">Stop</string>
    <string name="right_motor_readback">Right Readback</string>
    <string name="left_motor_readback">Left Readback</string>
</resources>
