<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ControlActivity"
    android:id="@+id/top_layout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/address_text"
                android:hint="@string/address_hint"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_button"
                android:id="@+id/connect_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led_on"
                android:id="@+id/on_button"
                style="?android:attr/buttonStyleSmall" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led_off"
                android:id="@+id/off_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/left_motor_textview"
                android:hint="@string/left_motor_readback" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/right_motor_textview"
                android:hint="@string/right_motor_readback" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ll">

            <android.widget.VerticalSeekBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/left_motor_seekbar"
                android:layout_weight="0"
                android:layout_marginStart="40dp"
                android:indeterminate="false" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motor_coast"
                    android:id="@+id/coat_button"
                    android:layout_gravity="center" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motor_stop"
                    android:id="@+id/stop_button"
                    android:layout_gravity="center" />

            </LinearLayout>

            <android.widget.VerticalSeekBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/right_motor_seekbar"
                android:layout_weight="0"
                android:layout_marginEnd="40dp" />

        </LinearLayout>
    </LinearLayout>